got login and home page s started. Need to add sessions and cookies

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,15 +11,19 @@
 </head>
 <body>
     <nav class="nav">
-        <a class="nav-link active fs-4" aria-current="page" href="#">Home</a>
+        <a class="nav-link active fs-4" aria-current="page" href="/">Home</a>
         <a class="nav-link fs-4" href="#">Dashboard</a>
-        <a class="nav-link fs-4" href="#">Login</a>
+        <a class="nav-link fs-4" href="/login">Login</a>
       </nav>
       <header class="container-fluid p-2">
           <h1 id="home-title" class="p-2">Tech Blogger</h1>
       </header>
       <div>
         {{{body}}}  
+      </div>
+      <div class="d-flex justify-content-center">
+        <button type="button" class="btn btn-primary mt-3" data-bs-toggle="button" autocomplete="off">Add a Blog Post
+        </button>
       </div>
       
     
