login and post blogs

--- a/views/partials/blog-details.handlebars
+++ b/views/partials/blog-details.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header">
     Posted by:
-    {{user.first_name}} {{user.last_name}}
+    {{user.username}}
   </div>
   <div class="card-body text-center">
     <h5 class="card-title">{{blog_title}}</h5>
