--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,32 +1,57 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Blogger</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+ 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
+    {{!-- <link rel="stylesheet" type="text/css" href="./css/style.css" /> --}}
+  </head>
+  <body>
     <nav class="nav">
-        <a class="nav-link active fs-4" aria-current="page" href="/">Home</a>
-        <a class="nav-link fs-4" href="#">Dashboard</a>
+      <a class="nav-link active fs-4" aria-current="page" href="/">Home</a>
+      <a class="nav-link fs-4" href="#">Dashboard</a>
+      {{#if loggedIn}}
+        <a class="nav-link fs-4" id="logout" href='#'>Logout</a>
+      {{else}}
         <a class="nav-link fs-4" href="/login">Login</a>
-      </nav>
-      <header class="container-fluid p-2">
-          <h1 id="home-title" class="p-2">Tech Blogger</h1>
-      </header>
-      <div>
-        {{{body}}}  
-      </div>
+      {{/if}}
+    </nav>
+    <header class="container-fluid p-2">
+      <h1 id="home-title" class="p-2">Tech Blogger</h1>
+    </header>
+    <div>
+      {{{body}}}
+    </div>
+    {{#if loggedIn}}
       <div class="d-flex justify-content-center">
-        <button type="button" class="btn btn-primary mt-3" data-bs-toggle="button" autocomplete="off">Add a Blog Post
-        </button>
+        <a
+          class="btn btn-primary mt-3"
+           href="/blog"
+        >Add a Blog Post
+        </a>
       </div>
-      
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    {{/if}}
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    {{#if loggedIn}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
+  </body>
 </html>
