mostly finished all user routes with modularization

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,10 @@
+
+{{!-- {{#if loggedIn}} --}}
 {{#each blogs as |blog|}}
 {{> blog-details}}
 {{/each}}
+{{!-- {{else}} --}}
+{{!-- <div class="container">
+<h3>Signin or sign up to read/write posts or comments</h3>
+</div>
+{{/if}} --}}
