--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
   <body>
     <nav class="nav">
       <a class="nav-link active fs-4" aria-current="page" href="/">Home</a>
-      <a class="nav-link fs-4" href="#">Dashboard</a>
+      <a class="nav-link fs-4" href="/dashboard">Dashboard</a>
       {{#if loggedIn}}
         <a class="nav-link fs-4" id="logout" href='#'>Logout</a>
       {{else}}
