--- a/views/postBlog.handlebars
+++ b/views/postBlog.handlebars
@@ -1,15 +1,13 @@
 <form class="container">
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Title</label>
+    <label for="blog-title" class="form-label">Title</label>
     <input
-      
       class="form-control"
       id="blog-title"
-      placeholder="Title"
-    />
+      placeholder="Title"/>
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">Blog Information</label>
+    <label for="blog-info" class="form-label">Blog Information</label>
     <textarea
       class="form-control"
       id="blog-info"
