fixed connection between blog and comments

--- a/views/comment-field.handlebars
+++ b/views/comment-field.handlebars
@@ -1,3 +1,4 @@
+<p style='display: none;' id='blogId'>{{id}}</p>
 <div class="card">
   <div class="card-header">
     Posted by: {{user}} <p>on {{format_date date}}</p>
@@ -16,7 +17,7 @@
   {{/each}}
   </div>
 <div>
-    <form class="container">
+    <form class="container" id="commentForm">
   <div class="mb-3">
     <label for="comment-field" class="form-label">Comment Here</label>
     <textarea
@@ -25,7 +26,8 @@
       rows="3"
     ></textarea>
   </div>
-  <button type="submit" class="btn btn-primary" id="postBtn">Submit</button>
+  <button type="submit" class="btn btn-primary" id="commentBtn">Submit</button>
 </form>
 </div>
 </div>
+<script src="/public/js/comments.js"></script>
